# bazel_grpc

./: BUILD  README.md  WORKSPACE
src/: BUILD  BUILD.bazel  bar.proto  child.proto  foo.proto  has_external_deps.proto  has_external_deps_grpc.proto  main.go  no_go_package.proto  parent.proto  simple.proto  useful.proto
